2012-03-22  Csaba Osztrogonác  <ossy@webkit.org>

        Actually move WTF files to their new home
        https://bugs.webkit.org/show_bug.cgi?id=81844

        [Qt] Unreviewed buildfix after r111778.

        * Source/api.pri:

2012-03-22  Ming Xie  <mxie@rim.com>

        OLD_COMPILE_FLAGS was set incorrectly in WebKitHelpers.cmake
        https://bugs.webkit.org/show_bug.cgi?id=81961

        Reviewed by Rob Buis.

        This fixes the regression introduced by r109292

        * Source/cmake/WebKitHelpers.cmake:

2012-03-22  Dave Michael  <dmichael@chromium.org>

        HTMLPluginElement is not destroyed on reload or navigation if getNPObject is called
        https://bugs.webkit.org/show_bug.cgi?id=80428

        Reviewed by Eric Seidel.

        Test: plugins/netscape-dom-access-and-reload.html

        * Source/autotools/symbols.filter: Export a symbol for InspectorCounters::counterValue.

2012-03-22  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed. Adding Source/WTF to the build and updating
        waf port list.

        * wscript:

2012-03-21  Ryosuke Niwa  <rniwa@webkit.org>

        Add the forgotten admin.html after r108917.

        * Websites/webkit-perf.appspot.com/admin.html: Added.

2012-03-21  Ryosuke Niwa  <rniwa@webkit.org>

        Increment the perf-o-matic app version.

        * Websites/webkit-perf.appspot.com/app.yaml:

2012-03-20  Eric Seidel  <eric@webkit.org>

        Move wtf/Platform.h from JavaScriptCore to Source/WTF/wtf
        https://bugs.webkit.org/show_bug.cgi?id=80911

        Reviewed by Adam Barth.

        * CMakeLists.txt: Define WTF_DIR

2012-03-20  Ryosuke Niwa  <rniwa@webkit.org>

        Perf-o-matic: don't query datastore to generate chart API urls
        https://bugs.webkit.org/show_bug.cgi?id=81499

        Reviewed by Hajime Morita.

        Parse json text to extract timestamps and test values instead of iterating
        through the data store.
