@@ -59,8 +59,6 @@ USER_LINGUAS :=
 USE_LINGUAS :=
 MOFILES :=
 dom_binding_idls :=
-wtf_cppflags:=
-wtf_cflags :=
 wtf_sources :=
 javascriptcore_h_api :=
 javascriptcore_cppflags:=
