@@ -585,7 +585,7 @@ javascriptcore_sources += \
 if TARGET_WIN32
 else
 javascriptcore_sources += \
-	Source/JavaScriptCore/jit/ExecutableAllocatorFixedVMPool.cpp \
+	Source/JavaScriptCore/jit/ExecutableAllocatorFixedVMPool.cpp
 endif
 
 # minidom
