@@ -19,20 +19,14 @@ libWTF_la_CXXFLAGS = \
 	$(global_cxxflags) \
 	$(libWTF_la_CFLAGS)
 
-wtf_cflags += \
+libWTF_la_CFLAGS = \
+	-fstrict-aliasing \
+	-O3 \
 	$(global_cflags) \
 	$(GLIB_CFLAGS) \
 	$(UNICODE_CFLAGS)
 
-libWTF_la_CFLAGS = \
-	-fstrict-aliasing \
-	-O3 \
-	$(wtf_cflags)
-
-wtf_cppflags += \
-	-I$(srcdir)/Source \
-	-I$(srcdir)/Source/WTF
-
 libWTF_la_CPPFLAGS = \
 	$(global_cppflags) \
-	$(wtf_cppflags)
+	-I$(srcdir)/Source \
+	-I$(srcdir)/Source/WTF
